testsuite/tests/th/T5358.stderr

T5358.hs:14:12: error:
    • Exception when trying to run compile-time code:
        runTest called error: forall (t_0 :: *) . t_0 -> GHC.Types.Bool
CallStack (from HasCallStack):
  error, called at T5358.hs:15:18 in main:T5358
      Code: do VarI _ t _ <- reify (mkName "prop_x1")
               error $ ("runTest called error: " ++ pprint t)
    • In the untyped splice:
        $(do VarI _ t _ <- reify (mkName "prop_x1")
             error $ ("runTest called error: " ++ pprint t))
